# ParallelismWithFunctionalProgramming

./: .gitignore  CHANGELOG.md  README.md  haskell-parallelism.cabal  task.md
Code_Till_Phase3/cpp/: a.out  benchmark.cpp
Code_Till_Phase3/haskell/: haskell-parallelism.cabal
Code_Till_Phase3/haskell/app/: BenchMatMul.hs  Main.hs
Code_Till_Phase3/haskell/src/Bench/: Utils.hs
Code_Till_Phase3/haskell/src/Matrix/: SequentialMatMul.hs
Code_Till_Phase3/haskell/src/Sorting/: ParallelMergeSort.hs
Code_Till_Phase3/python/: benchmark.py
Joshi/: .ghc.environment.x86_64-mingw32-9.6.7
Joshi/app/: Main.hi  Main.hs
Joshi/src/Parallel/: Mandelbrot.hi  Mandelbrot.hs  ParMatrixMult.hi  ParMatrixMult.hs  ParQuickSort.hi  ParQuickSort.hs
Joshi/src/Sequential/: MatrixMult.hi  MatrixMult.hs  QuickSort.hi  QuickSort.hs
Joshi/src/Utils/: Timing.hi  Timing.hs
Krish/: Phase1.md
Krish/cpp/: benchmark.cpp
Krish/haskell/: haskell-parallelism.cabal
Krish/haskell/app/: BenchKMeans.hs  BenchMergeSort.hs  BenchWordCount.hs  Main.hs
Krish/haskell/src/Bench/: Utils.hs
Krish/haskell/src/KMeans/: SequentialKMeans.hs
Krish/haskell/src/MapReduce/: ParallelWordCount.hs  SequentialWordCount.hs
Krish/haskell/src/Matrix/: ParallelMatMul.hs  SequentialMatMul.hs
Krish/haskell/src/MonteCarlo/: ParallelPi.hs  SequentialPi.hs
Krish/haskell/src/NumericalIntegration/: ParallelIntegration.hs  SequentialIntegration.hs
Krish/haskell/src/Sorting/: ParallelMergeSort.hs  SequentialMergeSort.hs
Krish/python/: benchmark.py
app/: Main.hs
cpp/: benchmark  benchmark.cpp
haskell/: haskell-parallelism.cabal
haskell/app/: BenchIntegration.hs  BenchKMeans.hs  BenchMonteCarlo.hs  BenchWordCount.hs
haskell/src/Bench/: Utils.hs
haskell/src/KMeans/: ParallelKMeans.hs  SequentialKMeans.hs
haskell/src/MapReduce/: SequentialWordCount.hs
haskell/src/MonteCarlo/: ParallelPi.hs  SequentialPi.hs
haskell/src/Sorting/: ParallelMergeSort.hs  SequentialMergeSort.hs
python/: benchmark.py
src/: Algorithms.hs
